add searching form and view

--- a/baza_regon/templates/searcher/result.html
+++ b/baza_regon/templates/searcher/result.html
@@ -1,6 +1,8 @@
 {% block content %}
 
     Wyniki wyszukiwania:
-        
+        {% for element in result %}
+            {{ element }}
+        {% endfor %}
 
 {% endblock %}
